--- a/index.html
+++ b/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <div class="container-azul">
+      <div class="right-section">
+        <div class="top">
+          <div class="brand">
+            <img src="./images/brand.png" alt="" />
+          </div>
+          <div class="login">
+            <p class="cta-login">Log in</p>
+            <div class="home">
+              <img src="./images/home.png" alt="" />
+            </div>
+          </div>
+          <div class="frame">
+            <div class="text-area">
+              <h1 class="title">
+                Capture and Share <br />
+                the World's Moments
+              </h1>
+              <p>
+                Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way
+                to share your life with friends and family.
+              </p>
+              <p>
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world.
+              </p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>
+          </div>
+          <div class="badges">
+            <img src="./images/badge-android.png" alt="" />
+            <img src="./images/badge-iphone.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="left-section">
+        <div class="phones">
+          <img src="./images/phones.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul class="footer-links">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="date">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
